--- a/sources/sections/ad-bibliography.adoc
+++ b/sources/sections/ad-bibliography.adoc
@@ -2,24 +2,21 @@
 [bibliography]
 == Bibliography
 
-[bibliography]
-=== {blank}
-
 To preserve a unique numeric identifier for all documents listed as references in
 this standard, the numbering of references in this annex is continued from the list
 of normative reference in <<cls-3>>.
 
-* [[[omg2007-superstructure,Object Management Group (OMG)]]], Object Management Group (OMG), February 2007, Unified Modeling Language: Superstructure, version 2.1.1 , formal/07-02-05, available from OMG.org at http://www.omg.org/cgi-bin/doc?formal/07-02-05
+* [[[omg2007-superstructure,OMG UML/2.1.1/Superstructure]]], Object Management Group (OMG), February 2007, Unified Modeling Language: Superstructure, version 2.1.1 , formal/07-02-05, available from OMG.org at http://www.omg.org/cgi-bin/doc?formal/07-02-05
 
-* [[[omg2007-infrastructure,Object Management Group (OMG)]]], Object Management Group (OMG), February 2007, Unified Modeling Language: Infrastructure , version 2.1.1 , formal/07-02-06, available from OMG.org at http://www.omg.org/cgi-bin/doc?formal/07-02-06
+* [[[omg2007-infrastructure,OMG UML/2.1.1/Infrastructure]]], Object Management Group (OMG), February 2007, Unified Modeling Language: Infrastructure , version 2.1.1 , formal/07-02-06, available from OMG.org at http://www.omg.org/cgi-bin/doc?formal/07-02-06
 
 * [[[iso9075,ISO/IEC 9075:2003]]], ISO/IEC JTC 1, ISO/IEC 9075:2003 -- Information Technology -- Database Languages - SQL.
 
 * [[[iso13249-3,ISO/IEC 13249-3:2006]]]
 
-* [[[w3c-xml-part1,W3C]]], XML Schema 1.1 Part 1: Structures, 31 August 2006, available from W3C at http://www.w3.org/TR/xmlschema11-1/
+* [[[w3c-xml-part1,W3C xmlschema11-1]]], XML Schema 1.1 Part 1: Structures, 31 August 2006, available from W3C at http://www.w3.org/TR/xmlschema11-1/
 
-* [[[w3c-xml-part2,W3C]]], XML Schema 1.1 Part 2: Datatypes, 17 February 2006, available from W3C at http://www.w3.org/TR/xmlschema11-2/
+* [[[w3c-xml-part2,W3C xmlschema11-2]]], XML Schema 1.1 Part 2: Datatypes, 17 February 2006, available from W3C at http://www.w3.org/TR/xmlschema11-2/
 
 * [[[iso10000,ISO/IEC TR 10000]]], ISO/IEC TR 10000: Information Technology -- Framework and taxonomy of International Standardized Profiles
 
