--- a/sources/sections/ac-definitions.adoc
+++ b/sources/sections/ac-definitions.adoc
@@ -8,52 +8,55 @@
 order. It may be easier to understand the more significant terms in the following
 less formal definitions arranged in a bottom-up order:
 
-. a {{standardization target type,options="noref"}} is a type of entity about which
-a standard is written. An instance of a {{standardization target type,options="noref"}}
-is a {{standardization target,options="noref"}}. A standard
-may address multiple targets in separate <<conformance-class,_conformance classes_>>.
-. a {{requirement,options="noref"}} is a statement of a condition to be satisfied by
-a single {{standardization target type,options="noref"}}, and it must be stated in
-"normative" language.
-. a {{conformance test,options="noref"}} checks if a set of
-{{requirement,requirements,options="noref"}} are met (*pass*) or not met (*fail*) by
-a {{standardization target,options="noref"}}. The relationship between
-{{conformance test, conformance tests,options="noref"}} and
-{{requirement,requirements,options="noref"}} is many-to-many.
-. all {{conformance test, conformance tests,options="noref"}} are graded as *pass*
-or *fail* against each instance of the {{standardization target,options="noref"}}.
-. a {{requirement,options="noref"}} is associated to at least one
-{{conformance test,options="noref"}}.
-. a {{recommendation,options="noref"}} is a suggestion and is not associated to any
-{{conformance test,options="noref"}}.
-. a {{requirements class,options="noref"}} is a set of one or more
-{{requirement,requirements,options="noref"}} all on the same
-{{standardization target type,options="noref"}}.
-. a {{conformance test class,conformance (test) class,options="noref"}} is a
-collection of {{conformance test,conformance tests,options="noref"}} that are
-associated to and only to the requirements in a corresponding
-{{requirements class,options="noref"}}.
-. a {{conformance test class,conformance (test) class,options="noref"}} is also
-collection of {{conformance test module,conformance test modules,options="noref"}}
-that group {{conformance test, conformance tests,options="noref"}} on a single
-{{standardization target type,options="noref"}}.
-. a *conformant implementation* is a {{standardization target type,options="noref"}}
-that has successfully passed all tests in a specified
-{{conformance test class,conformance (test) class,options="noref"}}
-and received a {{certificate of conformance,options="noref"}}
-. the {{core requirements class,options="noref"}} of a standard is the minimal set
-of {{requirement,requirements,options="noref"}} which must be supported by all
-*conformant implementations*. If a specification addresses multiple
-{{standardization target type,standardization target types,options="noref"}}, it may
-have a *core* for each *target type*.
-. an *extension* of a {{requirements class,options="noref"}} is a second
-{{requirements class,options="noref"}} (the extension) that adds additional
-{{requirement,requirements,options="noref"}} to the first
-{{requirements class,options="noref"}} (the *base requirements class* being
-extended). The extension is said to be dependent on the *base*. Any
-{{conformance test class,options="noref"}} must identify all of its dependencies
-during the execution of conformance tests against a candidate
-{{standardization target,options="noref"}}.
+. a {{standardization target type}} is a type of entity about which a standard
+is written. An instance of a {{standardization target type}} is a
+{{standardization target}}. A standard may address multiple targets in separate
+<<conformance-class,_conformance classes_>>.
+
+. a {{requirement}} is a statement of a condition to be satisfied by a single
+{{standardization target type}}, and it must be stated in "normative" language.
+
+. a {{conformance test}} checks if a set of
+{{requirement,requirements}} are met (*pass*) or not met (*fail*) by a
+{{standardization target}}. The relationship between {{conformance test,
+conformance tests}} and {{requirement,requirements}} is many-to-many.
+
+. all {{conformance test, conformance tests}} are graded as *pass* or *fail*
+against each instance of the {{standardization target}}.
+
+. a {{requirement}} is associated to at least one {{conformance test}}.
+
+. a {{recommendation}} is a suggestion and is not associated to any
+{{conformance test}}.
+
+. a {{requirements class}} is a set of one or more {{requirement,requirements}}
+all on the same {{standardization target type}}.
+
+. a {{conformance test class,conformance (test) class}} is a collection of
+{{conformance test,conformance tests}} that are associated to and only to the
+requirements in a corresponding {{requirements class}}.
+
+. a {{conformance test class,conformance (test) class}} is also collection of
+{{conformance test module,conformance test modules}} that group
+{{conformance test, conformance tests}} on a single
+{{standardization target type}}.
+
+. a *conformant implementation* is a {{standardization target type}} that has
+successfully passed all tests in a specified {{conformance test
+class,conformance (test) class}} and received a {{certificate of conformance}}
+
+. the {{core requirements class}} of a standard is the minimal set of
+{{requirement,requirements}} which must be supported by all *conformant
+implementations*. If a specification addresses multiple {{standardization target
+type,standardization target types}}, it may have a *core* for each *target
+type*.
+
+. an *extension* of a {{requirements class}} is a second {{requirements class}}
+(the extension) that adds additional {{requirement,requirements}} to the first
+{{requirements class}} (the *base requirements class* being extended). The
+extension is said to be dependent on the *base*. Any {{conformance test class}}
+must identify all of its dependencies during the execution of conformance tests
+against a candidate {{standardization target}}.
 
 [[annex-C-2]]
 === UML Model
