--- a/sources/sections/00-preface.adoc
+++ b/sources/sections/00-preface.adoc
@@ -1,13 +1,14 @@
 [.preface]
 == Preface
 
-This standard contains requirements for writing standards to be used for any document
-whose eventual purpose is the specification of requirements for software, services or
-data structures.
+This OGC Policy specifies requirements and recommendations for writing and structuring OGC Standards.
 
-Suggested additions, changes, and comments on this standard are welcome and
-encouraged. Such suggestions may be submitted through the OGC change request system
-(http://www.opengeospatial.org/standards/cr).
+The goal is to ensure that all OGC standards specify requirements in a common and consistent manner and that these requirements are testable.
+Any new OGC standard, abstract specification, or major revision of an existing standard shall comply with this Policy standard in the structure of its internal models and its conformance tests. 
+
+Suggested additions, changes, and comments on this OGC Policy are welcome and
+encouraged. Such suggestions may be submitted through the OGC Change Request System
+(http://www.opengeospatial.org/standards/cr) or by creating an issue in the GitHub repository for this Policy (https://github.com/opengeospatial/ogc-modspec).
 
 [.preface]
 == Document terms and definitions
@@ -21,8 +22,18 @@ conform to this standard.
 [.preface]
 == Document contributors
 
-The following voting members of the Standards Working Group participated in editing
-this document:
+The following OGC Members participated in editing this document:
+
+[%unnumbered]
+|===
+^h| Person ^h| Organization Represented
+| Carl Reed | Carl Reed & Associates
+|===
+
+[.preface]
+== Acknowledgements
+
+The following OGC Members contributed and particpated in developing the original version of this Policy document.
 
 [%unnumbered]
 |===
