--- a/sources/sections/00-foreword.adoc
+++ b/sources/sections/00-foreword.adoc
@@ -1,8 +1,8 @@
 [.preface]
 == Foreword
 
-This OGC Policy document (aka this Policy), while specifying the structure of OGC standards, does not supply
-specific content. Where possible, this Policy is conformant with itself (with respect to the core conformance test class, <<cls-6>>
+This OGC document (aka the ModSpec), while specifying a formal structure for standards documents, does not supply
+specific content. Where possible, this document is conformant with itself (with respect to the core conformance test class, <<cls-6>>
 and the Conformance Test Suite <<annex-A-1>>).
 
 _Attention is drawn to the possibility that some of the elements of this document may
